Added another external sort implementation using Spark. + Integrated with docker to make all the comparisons platform agnostic