@@ -15,6 +15,11 @@ dependencies {
     implementation 'org.apache.logging.log4j:log4j-api:2.22.0'
     implementation 'org.apache.logging.log4j:log4j-core:2.22.0'
     implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.0'
+
+    // Spark dependencies.
+    implementation group: 'org.apache.spark', name: 'spark-core_2.12', version: '3.5.1'
+    implementation group: 'org.apache.spark', name: 'spark-sql_2.12', version: '3.5.1'
+    implementation group: 'org.scala-lang', name: 'scala-library', version: '2.12.19'
 }
 
 test {
@@ -33,6 +38,7 @@ sourceSets {
 }
 
 jar{
+    zip64 true
     manifest {
         attributes("Main-Class": "$mainClassName",)
     }
@@ -47,4 +53,13 @@ jar{
 
 application {
     mainClass = 'Main'
+}
+
+tasks.named('run') {
+    doFirst {
+        jvmArgs = [
+                '--add-exports', 'java.base/sun.nio.ch=ALL-UNNAMED',
+                '--add-exports', 'java.base/sun.security.action=ALL-UNNAMED'
+        ]
+    }
 }
